# polar-heatmap-widget

./: .gitignore  CMakeLists.txt  D3_GuideReview_Changes.odt  MainWindow.cpp  MainWindow.h  README.md  main.cpp  myglwidget.cpp  myglwidget.h  polarpywidget.cpp  polarpywidget.h  unified_main.cpp
doc/: SDD.md
include/: colormap.h  polarpywidget.h  rasterstripwidget.h
src/: colormap.cpp  polarpywidget.cpp  rasterstripwidget.cpp
